Update for patch 2.20

--- a/corner-safejumps.html
+++ b/corner-safejumps.html
@@ -18,7 +18,7 @@
 		<p>Grimnir's basic corner combo. Not a safejump setup, but you should learn it first because the muscle memory for it is essential to the rest of his combo routing. Meterless, does a good chunk of damage, and sets up seals. Even without a setup, having seals up is already plenty threatening.</p>
 		
 		<h2>Metered Safejump</h2>
-		<code>(starter) > 214H > 2M > 236H > 5H > 623H > 22U (> 5U > j.6U whiff > j.H fuzzy)</code><br class="combo"/>
+		<code>(starter) > 214H > 2M > 236H > 5H > 623H > 22U (> 5U > j.6U whiff > j.H  safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/metered-1.mp4"/>
 		</video>
@@ -28,7 +28,7 @@
 		<p>All that said the combo as written is still excellent - solid damage, easy, consistent, and the starter is very common. Combos like this where the first special is 214H are good to learn because you can do them out of any starter, or even if the opponent isn't quite in the corner yet. There will be setups later that only work off of close starters like autocombo while standing directly in the corner. They're still valid setups, but because they're more specific you won't have as many chances to hit them in a match.</p>
 		
 		<h2>Standard Meterless Safejump</h2>
-		<code>(starter) > 214H > 5L > 5H > 236H~4 > 623H > j.H > rejump j.H (> j.22H > j.6U whiff > j.H fuzzy)</code><br class="combo"/>
+		<code>(starter) > 214H > 5L > 5H > 236H~4 > 623H > j.H > rejump j.H (> j.22H > j.6U whiff > j.M safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/meterless-fuzzy.mp4"/>
 		</video>
@@ -39,7 +39,7 @@
 		<p>These setups are either more difficult or less useful than the above setups. They still have their uses, especially if your execution is good, but you should learn them after.</p>
 		
 		<h2>Old Meterless Safejump</h2>
-		<code>(starter) > 214H > 2M > 236H~8 > 5H > 623H > j.22H > j.6U > j.L > 2.H (> 5U > j.H fuzzy)</code><br class="combo"/>
+		<code>(starter) > 214H > 2M > 236H~8 > 5H > 623H > j.22H > j.6U > j.L > 2.H (> 5U > j.H  safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/old-route-1.mp4"/>
 		</video>
@@ -93,7 +93,14 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/zipper-1.mp4"/>
 		</video>
-		<p>Up-down-up-down-up-down. Very fun meterless safejump. You need to delay the 5U cancel out of 2H until one of the late cancel frames or your j.H will miss. You'll need this delayed cancel technique again for an actually useful cashout combo later.</p>
+		<p>Up-down-up-down-up-down. Very fun meterless safejump. You need to delay the 5U cancel out of 2H until one of the late cancel frames or your j.H will miss.</p>
+		
+		<h2>Ball Whiff Safejump</h2>
+		<code>(starter) > 623M > j.1U > 2H > 214M > 22U > 8U > 5H > j.214H (> j.L safejump)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/ball-whiff-safejump.mp4"/>
+		</video>
+		<p>Requires a high seal already set. Looks kind of like a combo drop and sometimes baits people to panic DP.</p>
 		
 		<h2>Grounded Tornado Safejump</h2>
 		<code>autocombo > 236H > 5HHH (crouch) or 5MMM (standing) > 623H > j.H > 2H > 5U > j.M > j.214H > 22U (> 2L whiff > j.H safejump)</code><br class="combo"/>
