--- a/install.html
+++ b/install.html
@@ -60,12 +60,26 @@
 		</video>
 		<p>Funny corner steal. Reactable, but most people aren't ready for Grimnir to steal the corner and are not holding the block button so it hits a decent amount. You're +3 so even if they react they can't mash. Can also occasionally bait a reversal by crossing up the opponent's input. Fairly easy to execute since the muscle memory transfers directly from the standard meterless safejump route. You can also go into this from the standard install midscreen route, which is shown in the latter half of the video.</p>
 		
-		<h2>Install Tornado-In-Front</h2>
-		<code>(starter) > 214H > 2M > 623M > j.2U > rejump j.L > j.1U > 5H > 236H~4</code><br class="combo"/>
+		<h2>Install Ball Loop</h2>
+		<code>j.214M > 8U > j.214L > 8U > j.214L > 8U > j.214L (> 8U whiff > j.H safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-tornado.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-ball-loop.mp4"/>
 		</video>
-		<p>Install-exclusive backup tornado-in-front setup for when 22H is on cooldown. Has secondary merit as a much easier route if you aren't confident in your execution for the regular meterless setup. Spends two install juice. Leaves you slightly minus, but not punishable.</p>
+		<p>Your optimal* (in terms of mental damage) combo out of j.214M throwbait. Spends four juice for a really stupid safejump.</p>
+		
+		<h2>Install Backward Ball</h2>
+		<code>j.214M > 7U > j.H > (delay) f.H > 214H > 5H > 623H (> j.22H)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-backward-ball.mp4"/>
+		</video>
+		<p>Cool 1-juice j.214M throwbait conversion with a backwards airdash. Does respectable damage and sets up seals. If j.214M had meaningful merit as a throwbait this combo might actually get used.</p>
+		
+		<h2>Install X Ball</h2>
+		<code>(starter) > 623H > j.H > land and backjump > j.214L > delay j.3U > rejump j.214L > delay j.1U > 2H > 214H (> 22H)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-x-ball.mp4"/>
+		</video>
+		<p>Slightly difficult, but looks cool and only spends two juice so it's borderline usable.</p>
 		
 		<h2>Install Spin Loop</h2>
 		<code>autocombo > 623M > j.3U > 2H > 623M > j.2U whiff > 2M > 623L (> j.9U whiff > j.H safejump)</code><br class="combo"/>
