--- a/matchup-notes.html
+++ b/matchup-notes.html
@@ -828,5 +828,12 @@
 		<p>Supers: Her SBA and SSBA are both command grab supers, but uniquely they can both be jumped on reaction. If you aren't committed to a button when you see the cinematic, hold up for a full punish.</p>
 		<p>She has an alternate version of her SBA that sends an orb forward. Might invoke your Ferry trauma, but it's garbage by comparison. Roll on reaction for a full punish, jump over it, or just back up and it disappears pretty quickly on its own.</p>
 		<br>
+		
+		<div class="name-and-image">
+			<h2>Wilnas</h2>
+			<img src="https://grimnir-combos.github.io/charicons/wilnas.png"/>
+		</div>
+		<p>will add notes after I learn the matchup c:</p>
+		<br>
 	</body>
 </html>
