--- a/midscreen.html
+++ b/midscreen.html
@@ -16,48 +16,15 @@
 		</video>
 		<p>Grimnir's meterless midscreen conversions are pretty average. Off very distant hits (including most whiff punishes) you can't even connect 214L. If your starter is autocombo, you can end on 214M instead for greater corner carry.</p>
 		
-		<h2>Simple Midscreen</h2>
-		<code>autocombo or 2M > 236H~8 > 214U > 2H > 623M > 2M > 214H</code><br class="combo"/>
+		<h2>Midscreen-to-Corner</h2>
+		<code>autocombo or 2M > 236H~8 > 214U > 2H > 623H > 5H > 214H > 22U (> 2L whiff > j.H safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/simple-midscreen.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/214u-corner-wallbounce"/>
 		</video>
-		<p>Your easiest (actual) midscreen combo. If you're dropping the 2M after 623M it's probably because you're doing either the 214U or the 2H too late. You want all inputs as early as possible.</p>
-		<p>If you reach the corner for wallbounce you gain a lot of flexibility with the ender. A decent meterless ender is 5L > 22H, which leaves you +1 in their face. Note that any button you press here will lose to wakeup throw. Set up single seal instead if you want to safely take pressure with a button.</p>
-		<p>If you're close enough to the corner after the 2M you can press 623H > j.22H instead to safely set up seals.</p>
-		<p>If you're a little spaced out of the corner, you get a higher wallbounce that leaves you enough time to end in 22U for a safejump setup.</p>
-		
-		<h2>Midscreen Safejump (f.L)</h2>
-		<code>autocombo or 2M > 236H~8 > 214U > 22U > f.L > 623L (> 9U whiff > j.H safejump)</code><br class="combo"/>
-		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-fl-1.mp4"/>
-		</video>
-		<p>Your easiest midscreen safejump setup. Has less corner carry than the previous combo and spends an additional 25%, but gives you a safejump from anywhere on screen. Also leaves a little bit of room for wacky shenanigans, which are covered in more detail on other pages.</p>
-		
-		<h2>Midscreen Safejump (929U)</h2>
-		<code>autocombo or 2M > 236H~8 > 214U > (delay)22U > c.H > 623L > 9U > 2U (> delay 9U whiff > j.H safejump)</code><br class="combo"/>
-		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-929-1.mp4"/>
-		</video>
-		<p>Delay the 9U whiff at the end very slightly for this easy safejump setup. Its big appeal over the previous setup is the high ambiguity in the timing, which opens the possibility for a tricky empty jump low.</p>
-		
-		<h2>Midscreen Safejump (92U6U)</h2>
-		<code>autocombo or 2M > 236H~8 > 214U > (delay)22U > 5H > 623L > 9U > (delay)j.2U (> rejump j.6U whiff > j.M safejump)</code><br class="combo"/>
-		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-926-1.mp4"/>
-		</video>
-		<p>Delay the j.2U a little bit or it won't be a safejump. In fact, if you do the j.2U instantly you'll even lose to wakeup jab. Has the most corner carry of the midscreen safejump routes, though only by a little bit.</p>
-		
-		<h2>Midscreen Crossup (22[L])</h2>
-		<code>autocombo or 2M > 236H~8 > 214U > (delay)22U > c.H > 623L > 9U > j.M (> 22[L] > j.6U whiff > j.M)</code><br class="combo"/>
-		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-22l-2.mp4"/>
-		</video>
-		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-22l-1.mp4"/>
-		</video>
-		<p>Can crossup depending on your timings, which is funny but often results in you getting brave countered straight into the corner. To avoid crossing up delay the j.M and 22[L] cancel slightly. Crossup is a safejump, sameside is not.</p>
+		<p>Your easiest (actual) midscreen combo. You need to be somewhat close to the corner to get the wallbounce with 214U. Can end in whatever you feel like if you don't want to spend the additional 25% for the metered safejump.</p>
 		
 		<h1>Midscreen 623L</h1>
+		<p>Grimnir's midscreen combos took a significant hit in the 2.20 patch, so it's more important than ever to learn to make the most of your seals midscreen. These next few combos show ways to convert out of less convenient seal placements.</p>
 		<h2>623L (reaches corner)</h2>
 		<code>(starter) > 623L > 6U > 2M > 236H > run forward > 214H > 623H > j.H > rejump j.H (> j.22H > j.6U whiff > j.M safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
@@ -86,21 +53,87 @@
 		</video>
 		<p>Similar variant if you won't reach the corner with 214H.</p>
 		
-		<h1>Bonus Routes</h1>
-		<p>These setups are either more difficult or less useful than their alternatives.</p>
+		<h1>Raging Strike Routes</h1>
+		<p>With the removal of midscreen 214U wallbounce in patch 2.20, Grimnir now needs to rely on raging strike to convert into meaningful combos midscreen. Listed next are a bunch of different options. However, always keep in mind the additional option of "don't do them" - your bravery points are very valuable, and it isn't always worth spending them to convert into a combo. Knowing when to spend and when to save is a skill in itself.</p>
 		
-		<h2>Midscreen to Corner Safejump</h2>
-		<code>autocombo or 2M > 236H~8 > 214U > 22U > 5H > 623L > 9U > j.M (> j.9U6U whiff > j.H safejump)</code><br class="combo"/>
+		<h2>Raging Strike Seal Setup</h2>
+		<code>(starter) > raging strike > raging chain > 22U > 5H > 623L > 9U > delay j.3U > (walk back) delay 623H (> j.22H)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-to-corner-1.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-rs-seal-setup.mp4"/>
 		</video>
-		<p>If 214U takes you close-ish to the corner, you can spend three of your 22U seals to go into this easy safejump setup. Orrrrrr, you could spend one of your 22U seals and do the f.L > 9U whiff safejump setup instead. This was much more useful on an old patch where fuzzies were still in the game. These days, you won't find much practical use for it beyond "I want to do a different combo."</p>
+		<p>Puts the opponent's back against the wall and sets up seals. Great general-purpose option if you want to spend for it.</p>
 		
-		<h2>Midscreen Safejump (76U)</h2>
-		<code>autocombo or 2M > 236H~8 > 214U > (delay)22U > c.H > 623L > 9U > (delay)j.M (> j.7U6U whiff > j.H fuzzy)</code><br class="combo"/>
+		<h2>Raging Strike Safejump</h2>
+		<code>(starter) > raging strike > raging chain > 22U > 5H > 623L > 9U > j.H > j.214L > delay 9U (> j.H safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-76u.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-rs-safejump.mp4"/>
 		</video>
-		<p>The rare 7 input. Fairly difficult setup due to the awkward j.M link. Not really any concrete reason to go for this over one of the easier setups, but it looks pretty cool.</p>
+		<p>Easy midscreen safejump setup. Wait on the second 9U until after you "land" from the j.214L.</p>
+		
+		<h2>Raging Strike Tornado Carry</h2>
+		<code>(starter) > raging strike > raging chain > 22U > 5HH > 236H > delay 6U6U > 5M (> 214L whiff)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-rs-tornado-carry.mp4"/>
+		</video>
+		<p>Great corner carry route that leaves you plus in your opponent's face. Much more useful when you're close to the corner (shown next).</p>
+		
+		<h2>Raging Strike Tornado Carry (Reaches Corner)</h2>
+		<code>(starter) > raging strike > raging chain > 22U > 5HH > 236H > run forward > 214H > 2H (> 5U > j.H safejump)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-rs-tornado-carry-corner.mp4"/>
+		</video>
+		<p>Excellent midscreen-to-corner seal safejump setup. Sets up Grimnir's scary corner offense from as far as 60% of the stage.</p>
+		
+		<h2>Raging Strike Run Under</h2>
+		<code>(starter) > raging strike > raging chain > 22U > 5H > 623L > 9U > delay j.3U > 2H > 22L > run forward</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-rs-run-under.mp4"/>
+		</video>
+		<p>Funny gimmick sideswap that very obviously looks like a sideswap. Has non-gimmick merit as one of the only raging strike routes to leave you plus in the opponent's face *and* on top of a seal.</p>
+		
+		<h2>Raging Strike Run Under</h2>
+		<code>(starter) > raging strike > raging chain > 22U > 5H > 623L > 9U > delay j.3U > 2H > 22L > run forward</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-rs-run-under.mp4"/>
+		</video>
+		<p>Funny gimmick sideswap that very obviously looks like a sideswap. Has non-gimmick merit as one of the only raging strike routes to leave you plus in the opponent's face *and* on top of a seal.</p>
+		
+		<h1>Midscreen 22U</h1>
+		<p>Only works from autocombo starter because other starters have more pushback, so it's pretty rare that you have the opportunity to use one of these in a match. (That's why they're at the bottom of the page where no one will look.)</p>
+		
+		<h2>Midscreen 22U Seal Setup</h2>
+		<code>autocombo > 22U > f.H > 623L > 6U > 5M > 9U > delay j.3U > 2H > 623H > j.22H</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-22u-seal-setup.mp4"/>
+		</video>
+		<p>Sends the opponent to the corner and sets up seals. If the starter was more consistent this might have been our go-to midscreen combo. Alas.</p>
+		
+		<h2>Midscreen 22U Safejab</h2>
+		<code>autocombo > 22U > f.H > 623L > 6U > delay 6U > MMM (> 6U whiff > 214L)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-22u-safejab.mp4"/>
+		</video>
+		<p>Leaves you +6 in your opponent's face, setting up a perfectly timed safejab. Safejabs lose to ultimate DPs but are safe to any other form of DP.</p>
+		
+		<h2>Midscreen 22U Corner-to-Corner</h2>
+		<code>autocombo > 22U > f.H > 623L > 6U > 5M > 9U > delay j.3U > 5H > 214H > run forward > 22U (> 2L whiff > j.H safejump)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-22u-corner-to-corner.mp4"/>
+		</video>
+		<p>Pretty difficult combo that can just barely take the enemy corner-to-corner if you execute it perfectly. Note the height after the j.3U - you need about that much height. Any lower and you don't reach corner. Any higher and 214H whiffs. If you're slightly out of the corner it becomes pretty lenient and very solid for the rare opportunities you hit it.</p>
+		
+		<h2>Midscreen 22U Corner-to-Corner (Crouching)</h2>
+		<code>autocombo > 22U > microwalk 5HHH > 6U > 5HH > 6U > 5HHH > 236H~8 > 214U > walk forward > f.H > 623H > 5H > 214H > 5H > 22H</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-22u-crouching.mp4"/>
+		</video>
+		<p>Slightly easier than the previous combo but an even rarer hit.</p>
+		
+		<h2>Airdash 22U Confirm</h2>
+		<code>j.6U > j.L > 22U > microwalk 5HHH > 6U > 5HH > 6U > 5HHH > 236H~8 > 214U > 2H > 623H > 5H > 214H > 22U (> 2L whiff > j.H safejump)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/airdash-22u-confirm.mp4"/>
+		</video>
+		<p>If you're ready, you can convert a close airdash hit into 22U routing of your choice. Distant airdash hits will leave you too far to convert.</p>
 	</body>
 </html>
