--- a/u-skill-starters.html
+++ b/u-skill-starters.html
@@ -11,46 +11,19 @@
 		<h1>U Skill Starters</h1>
 		
 		<h2>214U starter (reaches corner)</h2>
-		<code>214U > (delay)5M > 236H~4 > walk forward > f.H > 214H > 623H > j.H > rejump j.H (> j.22H > j.6U whiff > j.M safejump)</code><br class="combo"/>
+		<code>214U > 5H > 623H > 5H > 236H > 5H > 214H > 22U (> 2L whiff > j.H safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/214u-reach-corner.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/214u-starter.mp4"/>
 		</video>
-		<p>If you're close enough to the corner, you can convert your 214U starter into a meterless safejump setup. Getting a full combo off a hitscan fullscreen bullshit U skill also does bonus mental damage to the opponent.</p>
-		<p>This is also your whiff punish combo; Grimnir frequently can't connect any other specials off of a whiff punish, so if you want a conversion you have to spend the 50 to cancel into 214U.</p>
-		<p>Has much better corner carry than you think it does. The 214H will wallbounce if you start the combo from anywhere about halfscreen or closer.</p>
-		<p>Note that for (214U > 5M > tornado) combos, you must hit the 214U from about 75% of the screen or closer. If the opponent is fullscreen, you get a different wallbounce that causes the combo to drop. It's easiest to convert this hit with f.M > raging strike.</p>
+		<p>If you're close enough to the corner, you can convert your 214U starter into a full combo + setup of your choice. Video shows metered safejump, but you can go into most corner routing off this if you just think of the 214U as a 214H instead.</p>
+		<p>Be aware that if the opponent is in the corner (as shown), you can be punished on block with backthrow. In older versions you could be punished with 6f buttons, but as of version 2.20 we're now only -4, so throw is the best anyone can do.</p>
 		
-		<h2>214U starter (no corner)</h2>
-		<code>214U > (delay)5M > 236H~4 > run forward > 5HH > 623H > 22X</code><br class="combo"/>
-		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/214u-no-corner.mp4"/>
-		</video>
-		<p>Conservation route if you won't reach corner but can't (or don't want to) spend another 25 to extend the combo further. Getting 5HH is actually pretty difficult - it's easy to screw up the timings and get f.H instead. In that case just fall back to the previous combo, and either set up seals directly after the f.H or take regular oki after the 214X.</p>
-		
-		<h2>214U starter (extra carry)</h2>
-		<code>214U > (delay)5M > 236H~6 > 214U > 2H > 623H > 22X</code><br class="combo"/>
-		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/214u-extra-carry.mp4"/>
-		</video>
-		<p>If you have the extra 50 to spend you will probably prefer this route over the previous one. Sets up seals and carries the opponent all the way to the corner from anywhere on screen.</p>
-		
-		<h2>214U antiair</h2>
-		<code>214U > 2M > raging strike > raging chain > 5HHH > 214H > 22H</code><br class="combo"/>
-		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/214u-antiair.mp4"/>
-		</video>
-		<p>Totally phoned in combo off an antiair 214U. You have a lot of options, and I didn't want to post fifteen different variants, so I'm going to talk about them here instead.</p>
-		<p>In the video you see that I got a "high" 214U hit (it doesn't look that high, but it's about as high as it can be). This gives you the option to do 2H or 22U instead of 2M, and then you can do whatever combo you want out of those and avoid spending the BP and meter on raging strike.</p>
-		<p>It is also possible to get a "low" 214U hit (even lower!!) where the enemy is basically on the ground already but gets scammed anyway. You don't have time to connect 2H or 22U here. In the heat of a match it can be difficult to eyeball the height, so your most consistent confirm is 2M > raging strike which works no matter the height.</p>
-		<p>Antiair 214U is a great way to disincentivize people jumping in neutral, especially preemptively pressing j.L to beat out airdash. But the timing is difficult - if you press too early, you actually lose to the j.L instead. And it is also character specific - each character has its own jump arc, and 214U itself has travel time so the timing is also distance-dependent. It is a good option to represent to show your opponent that it is dangerous to randomly jump around like an idiot in neutral, but be aware of the risks.</p>
-		<p>There are also some jump buttons it will directly lose to. A very notable example is Ladiva's grappler splash which beats it outright. Don't try antiair 214U in the Ladiva matchup.</p>
-		
-		<h2>236U starter</h2>
-		<code>236U > 214U > 22U > f.H > 214H > 5H > 623H > j.22L</code><br class="combo"/>
+		<h2>236U starter (near corner)</h2>
+		<code>236U > 214U > 2H > 623H > 5H > 214H > 5H (> 236L~4 whiff)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/236u-starter.mp4"/>
 		</video>
-		<p>Zoner's nightmare. You can combo out of 236U (ult tornado) if you're far enough away, or almost anywhere if your opponent gets hit jumping. You have a lot of options, based mostly around how much meter you're willing to spend. The one listed here is a good general-purpose route if you have the 100% to power it; it is rare to get this hit and not reach the corner.</p>
+		<p>Outside of the corner we no longer get a meaningful combo with 236U, but against people pressing projectile to try and create space out of the corner you can punish into a full combo like this. The 214U > 2H is more stable than it looks.</p>
 		
 		<h2>22U starter</h2>
 		<code>22U > 5HHH > 6U > 5HHH > 6U > 5HHH > 236H > 66L > 2M > raging strike > raging chain > 5H > 623H > 5H > 214H > 5H > raging strike > raging chain > 5H > raging strike > raging chain</code><br class="combo"/>
@@ -58,20 +31,5 @@
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/22u-starter.mp4"/>
 		</video>
 		<p>You can run up to someone in the corner and press 22U to crush their throwtech attempt. If it hits you do loads of damage. If they block you can cancel into seal dash to keep pressure. May or may not be a bad use of meter but it's really funny when it works. Note that 22U is -6 on block, so if you do it midscreen or don't cancel into dash you're punishable.</p>
-		
-		<h1>Bonus Routes</h1>
-		<h2>Old 214U midscreen</h2>
-		<code>214U > 5M > 236H~6 > 66H > 5M > 214H > 5H > 623H > 22X</code><br class="combo"/>
-		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/214u-old.mp4"/>
-		</video>
-		<p>Alternate version of the first 214U combo listed on this page that you can use if you're close enough to the corner. It has less corner carry and does less damage than the other combo, so there isn't really a reason to use it anymore, but it looks very cool.</p>
-		
-		<h2>Midscreen tornado overhead reset</h2>
-		<code>(starter) > 214U > 22U > 5H > 623L > 9U > (delay)j.3U > 2H (> 236H~8 whiff > 66M)</code><br class="combo"/>
-		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-tornado-overhead.mp4"/>
-		</video>
-		<p>Maybe too hard to perform in a match. The 66M is a very tight unbufferable link. If the enemy falls out of the tornado after only one hit instead of three, it means you were a frame too late. The timing to convert it into a combo afterward with f.M is also difficult - you need to delay it a bit or the 214H after will miss, but if you delay too much the 214H won't reach in time.</p>
 	</body>
 </html>
