--- a/camera-5050.html
+++ b/camera-5050.html
@@ -26,7 +26,7 @@
 		</video>
 		<p>Pretty much the same as the previous combo, but your last dash is down-forward instead of forward. You can skip the 3U at the end to conserve a seal, but a suitably prepared opponent can react to the audio cue of you only dashing once.</p>
 		
-		<h2>Highball Camera</h2>
+		<h2>Airball Camera</h2>
 		<code>(starter) > 623H > 2M > 236H~8 > superjump j.M > j.214H > j.22U > j.9U (> camera ender)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/camera-highball.mp4"/>
@@ -34,24 +34,34 @@
 		<p>More difficult camera setup that leaves an additional ground seal for higher reward on hit or additional pressure on block. Worse meter gain than the previous route, but if you start with 100 meter, the extra seal actually lets you build back the 50% on hit to end the resulting combo in super, a privilege the original camera combo no longer gets.</p>
 		<p>Camera stats: 20f overhead, net -6% meter, leaves 1 seal</p>
 		
+		<h2>Top Seal Camera</h2>
+		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22U > j.9U (> camera ender)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/top-seal-camera.mp4"/>
+		</video>
+		<p>In patch 2.00, Grimnir was nerfed to no longer get U skill refund when linking a U skill midair after an H special. This was the devs' chosen nerf to camera mix.</p>
+		<p>It didn't work.</p>
+		<p>This is what is known as a "refund route" because it sets up camera mix in a way where we still get the 25% U skill refund. If you're looping camera mix into camera mix you won't see much of a difference, but it's notably convenient if you want to do camera mix -> super because you no longer need to convolute your routing to build the meter in time.</p>
+		<p>This route is nearly identical to the original camera route, but it requires you to already have a high seal set.</p>
+		<p>Note that you are supposed to slightly delay the j.9U like I did in the video. If you press it instantly the combo won't drop but it will be very significantly more reactable.</p>
+		<p>You can also use a low seal instead of a high seal. In this case it's less reactable (19f overhead), but it does mean abbreviating your starter so you'll lose out on quite a bit of damage for the combo itself.</p>
+		<p>Camera stats: 21f overhead, net +24% meter, leaves 1 seal</p>
+		
 		<h2>Double Seal Camera</h2>
 		<code>(starter) > 236H~6 > 22U > 5HH > 623H > j.8U > (delay)j.H (> j.22L > camera ender)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/camera-refund-1.mp4"/>
 		</video>
-		<p>In patch 2.00, Grimnir was nerfed to no longer get U skill refund when linking a U skill midair after an H special. This was the devs' chosen nerf to camera mix.</p>
-		<p>It didn't work.</p>
-		<p>This is what is known as a "refund route" because it sets up camera mix in a way where we still get the 25% U skill refund. If you're looping camera mix into camera mix you won't see much of a difference, but it's notably convenient if you want to do camera mix -> super because you no longer need to convolute your routing to build the meter in time.</p>
-		<p>It is 1f more reactable than the previous two setups, but it also uniquely leaves behind 2 ground seals, so you're in a stronger position on block.</p>
-		<p>Note that you are supposed to slightly delay the j.H until you fall on top of the seal like I did in the video. If you press it instantly the combo won't drop but it will be very significantly more reactable.</p>
+		<p>Another refund route. Slightly more reactable, but it also uniquely leaves behind 2 ground seals, so you're in a stronger position on block.</p>
+		<p>Slightly delay the j.H until you fall on top of the seal like I did in the video. If you press it instantly the combo won't drop but it will be very significantly more reactable.</p>
 		<p>Camera stats: 21f overhead, net +0% meter, leaves 2 seals</p>
 		
-		<h2>Fast Camera</h2>
+		<h2>Yobu Camera</h2>
 		<code>(starter) > 623H > j.214H > j.22H > j.2U > j.8U > j.H > j.9U > j.22U > j.9U (> camera ender)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/camera-refund-2.mp4"/>
 		</video>
-		<p>Also known as the "Yobu camera" after the player that discovered it, but that name is misleading because Yobu has found way more than one setup. Another refund route. This one is interesting because it's actually *less* reactable than the original camera setup, a right no route has claimed before. It also doesn't require tornado at all, so you can do it even if tornado is on cooldown. AND it builds significantly more meter than any of the previous setups. The only "downside" is that it only leaves behind 1 seal. But in general, you can think of this as the strongest known camera setup.</p>
+		<p>Named after the player that discovered it, but the name is misleading because Yobu has found way more than one setup. Another refund route. This one is interesting because it's actually *less* reactable than the original camera setup. It also doesn't require tornado at all, so you can do it even if tornado is on cooldown. AND it builds significantly more meter. The only "downside" is that it only leaves behind 1 seal. But in general, you can think of this as the strongest known camera setup. Use this when you have an appropriate starter.</p>
 		<p>Camera stats: 18f overhead, net +20% meter, leaves 1 seal</p>
 	</body>
 </html>
