Update recommended combo list

--- a/midscreen.html
+++ b/midscreen.html
@@ -19,7 +19,7 @@
 		<h2>Midscreen-to-Corner</h2>
 		<code>autocombo or 2M > 236H~8 > 214U > 2H > 623H > 5H > 214H > 22U (> 2L whiff > j.H safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/214u-corner-wallbounce"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/214u-corner-wallbounce.mp4"/>
 		</video>
 		<p>Your easiest (actual) midscreen combo. You need to be somewhat close to the corner to get the wallbounce with 214U. Can end in whatever you feel like if you don't want to spend the additional 25% for the metered safejump.</p>
 		
@@ -82,7 +82,7 @@
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-rs-tornado-carry-corner.mp4"/>
 		</video>
-		<p>Excellent midscreen-to-corner seal safejump setup. Sets up Grimnir's scary corner offense from as far as 60% of the stage.</p>
+		<p>Excellent midscreen-to-corner seal safejump setup. Enables Grimnir's scary corner offense from as far as 60% of the stage.</p>
 		
 		<h2>Raging Strike Run Under</h2>
 		<code>(starter) > raging strike > raging chain > 22U > 5H > 623L > 9U > delay j.3U > 2H > 22L > run forward</code><br class="combo"/>
