--- a/recommended.html
+++ b/recommended.html
@@ -8,45 +8,53 @@
 	</head>
 	<body>
 		<a href="https://grimnir-combos.github.io/index.html">Grimnir Combos</a>
+		
 		<h1>Three Simple Combos</h1>
 		<p>These three combos will cover the most common situations you find yourself in during a match. If you're new to the character and just want a few quick things to get you started playing, learn these, and you can branch out into <a href="https://grimnir-combos.github.io/index.html">other setups</a> later.</p>
+		
 		<h2>Easy Corner Safejump</h2>
 		<code>(starter) > 214H > 2M > 236H > 5H > 623H > 22U (> 5U > j.6U whiff > j.H safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/metered-1.mp4"/>
 		</video>
 		<p>This is the easiest safejump setup Grimnir has access to. Replace the 22U at the end with super if you think it will kill. If you don't want to spend the meter, you can do 623H > 5HHH > 22H to set up seals without a safejump.</p>
-		<h2>Easy Midscreen Combo</h2>
-		<code>autocombo or 2M > 236H~8 > 214U > 2H > 623M > 2M > 214H</code><br class="combo"/>
+		
+		<h2>Easy Midscreen Safejump</h2>
+		<code>(starter) > raging strike > raging chain > 22U > 5H > 623L > 9U > j.H > j.214L > delay 9U (> j.H safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/simple-midscreen.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-rs-safejump.mp4"/>
 		</video>
-		<p>Consistent midscreen combo, and the muscle memory will transfer well to later routes. The most common drop point is doing the 214U too late - you want to do it as early as possible, or the combo will often drop after the 623M.</p>
+		<p>Consistent midscreen combo, though it costs a bravery point. Wait on the second 9U until after you "land" from the j.214L. Grimnir's non-raging strike midscreen combos got shot in patch 2.20 so raging strike is the most consistent way to convert midscreen hits now.</p>
+		
 		<h2>Easy Antiair</h2>
 		<code>2H (counterhit) > 236H~4 > run forward > 5HHH > 623H > j.22H</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-antiair-meterless-no-corner.mp4"/>
 		</video>
 		<p>2H counterhit antiair is your biggest reward on hit. Also works off low non-counterhits. Note the weird 623H hit here; you get this if they're high enough, and it leaves them closer for better oki. If you're late on the 5HHH you'll get a clean hit and send them flying instead. Not a big deal, just means instead of getting oki you're reset back to neutral (with seals).</p>
+		
 		<h1>Three More Combos</h1>
-		<p>These combos are more difficult than the previous three. They serve as an entry point into Grimnir's other setup types. You should wait to learn them until after you've gotten used to the character.</p>
-		<h2>Midscreen Safejump (f.L)</h2>
-		<code>autocombo or 2M > 236H~8 > 214U > 22U > f.L > 623L > 9U whiff > j.H safejump</code><br class="combo"/>
+		<p>These combos are more difficult or situational than the previous three. They serve as an entry point into Grimnir's other setup types. You should wait to learn them until after you've gotten used to the character.</p>
+		
+		<h2>Tornado "Safejump"</h2>
+		<code>(starter) > 214H > 2M > 623H > 5MMM (> 236L~4 whiff)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-fl-1.mp4"/>
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-safejump.mp4"/>
 		</video>
-		<p>The most popular of Grimnir's many midscreen safejump routes. Became much easier with the removal of fuzzies, so once you're used to it it's nearly drop-proof.</p>
+		<p>Not really a safejump, but may as well be: this setup is safe to DP and gives you free plus frames. As a bonus it also works against parry characters. The downsides are that it doesn't set up seals and it does pretty disappointing damage by Grimnir standards, but we can fix these flaws in later routes.</p>
+		
+		<h2>Midscreen-to-Corner Safejump</h2>
+		<code>(starter) > raging strike > raging chain > 22U > 5HH > 236H > run forward > 214H > 2H (> 5U > j.H safejump)</code><br class="combo"/>
+		<video controls preload="metadata" width="60%">
+			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/midscreen-rs-tornado-carry-corner.mp4"/>
+		</video>
+		<p>Excellent midscreen-to-corner seal safejump setup. Enables Grimnir's scary corner offense from as far as 60% of the stage.</p>
+		
 		<h2>Camera 50/50</h2>
 		<code>(starter) > 214H > 2M > 236H > 5H > 623H > j.22U > j.99U (> j.26U whiff > j.L)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/camera-high.mp4"/>
 		</video>
 		<p>End in (j.23U whiff > 2L) instead to hit low. Easier than it looks: when you press U for the j.99U, hold the U button for the entire rest of the setup up to the j.L/2L. High safejumps, low loses to DP. Theoretically reactable, but this isn't common knowledge and it's a very difficult reaction so the absurd majority of the ranked playerbase treats it as a pure 50/50.</p>
-		<h2>Tornado In Front (j.214U)</h2>
-		<code>(starter) > 214H > 2M > 623H > j.22H > j.3U > 8U > j.M > j.1U > rejump forward j.214U (> 236H~4 whiff, stop as soon as possible to set up in front of opponent)</code><br class="combo"/>
-		<video controls preload="metadata" width="60%">
-			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/tornado-in-front.mp4"/>
-		</video>
-		<p>About as difficult as it looks. Threatens a very scary combo off of throw. Notably better against parry characters than Grimnir's other setups. The effectiveness of this setup is somewhat matchup-dependent, but when it works it really really hurts.</p>
 	</body>
 </html>
