Remove accidental duplicate combo

--- a/install.html
+++ b/install.html
@@ -21,7 +21,7 @@
 		<p>Safejump setup that activates install in the middle. This isn't necessary, or even necessarily encouraged - you could just save your meter, and pop install if you get reset to neutral. But if you know you want to install this is a strong way to activate.</p>
 		
 		<h2>Alternate Install Setup Safejump</h2>
-		<code>(starter) > 214H > 5L > 5H > 236H~4 > 623H > j.H > 2H (> install > j.6U > j.M fuzzy)</code><br class="combo"/>
+		<code>(starter) > 214H > 5L > 5H > 236H~4 > 623H > j.H > 2H (> install > j.6U > j.M safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-setup-alt.mp4"/>
 		</video>
@@ -35,7 +35,7 @@
 		<p>The only midscreen install combo you need to know. Takes you corner-to-corner with only two dashes, AND it's a safejump setup. Need to delay the 623H dynamically based on distance to corner. Don't do more 6U > autocombo repetitions than you need to reach the corner - if you do too many, you'll get pushed out of range of autocombo and drop. Also, if you're too close to the corner, 236H will only hit twice and the combo will drop. At closer ranges, you can just do the standard corner bnb (listed next).</p>
 		
 		<h2>Install Corner Safejump</h2>
-		<code>(starter) > 214H > 5L > 5H > 236H~4 > 623H > j.H > rejump j.H (> j.22H > j.6U whiff > j.H fuzzy)</code><br class="combo"/>
+		<code>(starter) > 214H > 5L > 5H > 236H~4 > 623H > j.H > rejump j.H (> j.22H > j.6U whiff > j.H safejump)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-meterless-fuzzy.mp4"/>
 		</video>
@@ -95,7 +95,7 @@
 		</video>
 		<p>Even cooler install-exclusive safejump route. This one spends FOUR juice for the setup, which definitely means it must be better, yup.  Again, zero merit. You could have just taken them to the corner instead. But isn't having zero merit kind of a merit in itself?</p>
 		
-		<h2>Install j.M Loop (+3)</h2>
+		<h2>Install j.M Loop Empty Low (+3)</h2>
 		<code>autocombo > 9U > j.M > j.6U > j.M > rejump j.M > j.6U > j.M > rejump j.M (> j.9U whiff > j.M whiff > 2L)</code><br class="combo"/>
 		<video controls preload="metadata" width="60%">
 			<source src="https://github.com/grimnir-combos/grimnir-combos.github.io/raw/refs/heads/master/video/install-jm-loop-low.mp4"/>
